--- a/styles.css
+++ b/styles.css
@@ -150,18 +150,20 @@ footer {
 
 
 @media (max-width: 768px) {
+
     .header-content {
-        width: calc(100% - 140px);
+        width: calc(100% - 80px);
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
 
     #resume-button{
+        
         display:flex;
-        padding: 10px 20px;
+        padding: 10px 5px;
         font-size: 10px;
-        text-align: left;
+        text-align: center;
         text-decoration: none;
         color: #fff;
         background-color: rgba(39, 165, 165, 0.968);
@@ -353,6 +355,15 @@ section {
 
 /* Optional: Adjust button styles for smaller screens */
 @media (max-width: 768px) {
+
+    header h2 {
+        font-size: 1rem;
+        margin: 0;
+        text-align: center;
+        flex-grow: 1;
+        color: #a3aaa9;
+    }
+    
     .connect-btn {
         font-size: 14px;
         padding: 12px 24px;
@@ -383,6 +394,18 @@ section {
         box-shadow: 0 0 20px rgba(0, 255, 255, 0.9);
         transform: scale(1.05); /* Add slight scale effect on hover */
     }
+
+    #nav-toggle {
+        height: 20%;
+        background: none;
+        border: none;
+        color: #fff;
+        cursor: pointer;
+        padding: 0 10px;
+        z-index: 1001;
+    }
+
+
 
 }
 
@@ -463,6 +486,14 @@ section {
 }
 
 @media (max-width: 768px) {
+
+   
+
+    .home-content {
+        padding-left: 2%;
+        text-align:justify;
+        color: #c9d7ee; /* Text color */
+    }
     .about-container {
         display:inline-block;
         align-items: center;
@@ -503,14 +534,21 @@ section {
 
 .portfolio-container {
     
-
     padding-top: 40px;
     padding-bottom: 40px;
 
     display:flex;
+    flex-wrap: wrap;
+    gap: 20px;
     flex-direction:row;
     align-items: center;
     justify-content: center;
+}
+
+.portfolio-grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
 #portfolio h2 {
@@ -531,7 +569,7 @@ section {
     border-radius: 10px;
     box-shadow: 10px 18px 8px rgba(33, 35, 35, 0.984);
     transition: transform 0.3s, box-shadow 0.3s;
-    margin-left: 60px;
+    margin: 0px 60px;
     margin-bottom: 30px;
 }
 
@@ -546,34 +584,57 @@ section {
     text-decoration: none;
     color: inherit;
 }
-
 .pic{
+    border-style: dotted;
+    border-color: red;
     margin: 10px 10px;
-    width: 100%;
+    justify-content:flex-start;
+    width: 50%;
     height: auto;
     border-radius: 10px;
 
+    overflow: hidden; /* Ensure content does not overflow the container */
+    position: relative; /* Ensure positioning for video overlay */
+
 }
 
-.project img {
+.project img,
+.project video {
+
+    border-style: dotted;
+    border-color:green;
+    /* justify-content: center; */
     width: 100%;
-    height:fit-content;
-    border-radius: 10px;
+    height: 95%;
+    object-fit: cover; /* Maintain aspect ratio and cover the entire container */
+    display: block;
 }
 
-.project-video {
+
+
+.project video {
+    justify-content:left;
     position: absolute;
     top: 0;
-    left: 0;
-    width:100%;
-    height:100%;
-    object-fit:cover;
-    border-radius: 10px;
+    left: 1;
+    width: 100%;
+    height: 100%;
     opacity: 0;
-    transition: opacity 0.3s ease;
+    transition: opacity 0.3s ease-in-out;
 }
 
-.project:hover .project-video {
+#covid-div{
+    height:300px;
+}
+
+#covid-div img{
+    width: 100%;
+        height: 100%;
+        object-fit:scale-down;
+
+}
+
+.project:hover video {
     opacity: 1;
 }
 
@@ -600,16 +661,20 @@ section {
     border-radius: 5px;
 }
 
+/* Media query for screens with a max-width of 768px */
 @media (max-width: 768px) {
 
-    
-    
+
+    .portfolio-grid {
+        flex-direction: column;
+    }
+ 
     .project {
         height:min-content;
         position: relative;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        /* align-items: center; */
         background-color: rgba(22, 62, 65, 0.863);
         border-radius: 10px;
         box-shadow: 10px 18px 8px rgba(33, 35, 35, 0.984);
